:sparkles: get labels from api and show on page

--- a/static/index.html
+++ b/static/index.html
@@ -8,8 +8,13 @@
 </head>
 
 <body>
-    <div id="main"></div>
-    <pre id="log"></pre>
+    <div id="main">
+        <select name="datasets" id="datasets"></select>
+        <div id="labels"></div>
+    </div>
+    <div id="log-container">
+        <pre id="log"></pre>
+    </div>
     <script src="index.js"></script>
 </body>
 
