:tada: retrieve image from tfrecord through api
- refractor code :bug:
- convert LF line ending using python script :penguin:
- change logging color :art:

--- a/static/index.html
+++ b/static/index.html
@@ -11,8 +11,9 @@
     <div id="main">
         <select name="datasets" id="datasets"></select>
         <div id="labels"></div>
+        <div id="images"></div>
     </div>
-    <div id="log-container">
+    <div id="log-container" title="Press L to hide/show">
         <pre id="log"></pre>
     </div>
     <script src="index.js"></script>
