--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Dataset Inspection</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
     <div id="log-container" title="Press L to hide/show">
         <pre id="log"></pre>
     </div>
-    <script src="index.js"></script>
+    <script src="./index.js"></script>
 </body>
 
 </html>
