:sparkles: add resizable feature

--- a/static/index.html
+++ b/static/index.html
@@ -11,11 +11,13 @@
     <div id="main">
         <select name="datasets" id="datasets"></select>
         <div id="labels"></div>
+        <div id="resize-bar"></div>
         <div id="images"></div>
     </div>
     <div id="log-container" title="Press L to hide/show">
         <pre id="log"></pre>
     </div>
+    <script src="./resizable.js"></script>
     <script src="./index.js"></script>
 </body>
 
