inspection: set individual image to invalid

--- a/static/index.html
+++ b/static/index.html
@@ -14,9 +14,10 @@
         <div id="resize-bar"></div>
         <div id="images"></div>
     </div>
-    <div id="log-container" title="Press L to hide/show">
+    <div id="log-container" title="Press L to hide/show" hidden>
         <pre id="log"></pre>
     </div>
+    <div id="inspection-menu" style="display: none;"></div>
     <script src="./resizable.js"></script>
     <script src="./index.js"></script>
 </body>
