--- a/static/index.html
+++ b/static/index.html
@@ -15,6 +15,11 @@
         <div id="images"></div>
     </div>
     <div id="inspection-menu" style="display: none;"></div>
+    <div id="loading" style="display: none;">
+        <div class="rotating-ball red"></div>
+        <div class="rotating-ball green"></div>
+        <div class="rotating-ball blue"></div>
+    </div>
     <script src="./resizable.js"></script>
     <script src="./index.js"></script>
 </body>
